@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19990810
+MANIFEST for ded, version t19991130
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
