@@ -3,6 +3,7 @@
  * Author:	T.E.Dickey
  * Created:	16 Nov 1987
  * Modified:
+ *		16 Aug 1999, add cast to work with BeOS's long long ino_t.
  *		15 Feb 1998, add home/end/ppage/npage keys.
  *		13 Jan 1996, mods for scrolling regions.  Move search prompt
  *			     to bottom of work area.
@@ -56,7 +57,7 @@
 #define		DIR_PTYPES	/* includes directory-stuff */
 #include	"ded.h"
 
-MODULE_ID("$Id: dedtype.c,v 12.28 1998/02/16 18:20:36 tom Exp $")
+MODULE_ID("$Id: dedtype.c,v 12.29 1999/08/17 01:06:17 tom Exp $")
 
 typedef	struct	{
 	OFF_T	offset;
@@ -708,9 +709,9 @@ public	void	dedtype(
 		DirentT *de;
 		char	bfr[MAXPATHLEN];
 #ifdef	apollo
-# define INO_FMT "%08lx %s\n"
+# define INO_FMT "%08lx"
 #else
-# define INO_FMT "%5lu %s\n"
+# define INO_FMT "%5lu"
 #endif
 		if ((InFile = tmpfile()) == 0) {
 			warn(gbl, "tmp-file");
@@ -722,7 +723,8 @@ public	void	dedtype(
 					(int)de->d_namlen,
 					de->d_name,
 					FALSE);
-				FPRINTF(InFile, INO_FMT, de->d_ino, bfr);
+				FPRINTF(InFile, INO_FMT, (long) de->d_ino);
+				FPRINTF(InFile, " %s\n", bfr);
 			}
 			(void)closedir(dp);
 			rewind(InFile);
